--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-     <title>In Dust We Trust /_\</title>
+     <title>James' Website /_\</title>
      <style type="text/css">
           body
           {
@@ -61,23 +61,13 @@
                <a href="#">Mission Statement</a>
           </div>-->
           <div class="texthook">
-               <b>We should build a Pyramid. A real Pyramid. Made of stone. In the Mojave desert.<br /></b>
+               <b>This is my website i will add things too it soon but for now feel free to leave suggestions at jgray7964@sohamcollege.org.uk!<br /></b>
                <br />          
-               Currently the default consciousness of the United States lays at the feet of politicians who no longer work for the common person. This country needs a sign of Higher Consciousness.<br />
+               Currently i am working on coding games or embeding videos and quizes.<br />
                <br />
-               A Pyramid is the ultimate structure and symbol for a Unified Higher Consciousness. Together we can build one, to connect us to the ones in Egypt. We need a true spiritual vortex on our land.
-          
-               The symbol has been engraved in our minds daily on the Dollar bill. The symbol was put on the dollar bill to reinforce that we are ONE.
+               This website is hosted by Github so feel free to check them out!
                <br />
-               <br />
-               <hr />
-               <b>Help fund the Pyramid:</b><br />
-               <br />
-                    The Flower of Life Book will help you understand where we are coming from. If you'd like to read it and help support our project at the same time please use this link:<br />
-                    <br />
-                    <iframe src="http://rcm-na.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=manifestpyramid-20&o=1&p=8&l=as4&m=amazon&f=ifr&ref=ss_til&asins=B007YC6G3W" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-                    <br />
-               <br />
+              
                <hr />
                <br />
                <b>Keep in Touch:</b>
