--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
           body
           {
                margin: 0px;
-               background-image: url('images/background.jpg');
+               background-image: url('free_yellow_backround___3_by_londynt-d80rmz2.jpg');
           }
           
           .header
           {
-               background-image: url('images/header.jpg');
+               background-image: url('AwesomeBackroundr.jpg');
                background-repeat: repeat-x;
                background-position: top;
                margin: auto;
