--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           
           .header
           {
-               background-image: url('AwesomeBackroundr.jpg');
+               background-image: url('AwesomeBackround.jpg');
                background-repeat: repeat-x;
                background-position: top;
                margin: auto;
