--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                margin: auto;
                width: 770px;
           }
-          
+          <iframe src="//theoddler.github.io/makeunity3d/embed.html?url=url to your .unity3d file&event=click width="600" height="350"></iframe>
           a
           {
                text-decoration: none;
