--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                </div>
                How can you contact us directly?<br />
-               [[ WEARE ]] [[ BUILDING ]] [[ APYRAMID]] [[AT]] [[GMAIL]] [[COM]]
+             F***Alex right in the *****
                <br />
                <br />
                Last updated: 12/14/2013
