--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                </div>
                How can you contact us directly?<br />
              F***Alex right in the *****
+             Hit him hard 
                <br />
                <br />
                Last updated: 12/14/2013
