--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 			<!-- Picture obj_3 'China 2.jpg' -->
 
 			
-			<img alt="" src="wpimages/wp45dce66f_06.png" id="obj_3"  style="position:absolute;left:744px;top:824px;width:213px;height:201px;">
+			<img alt="" src="China 1.jpg" id="obj_3"  style="position:absolute;left:744px;top:824px;width:213px;height:201px;">
 			
 			
 
