--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
  *
  * Good morning, Dr. Eval.
  *
- * It wasn't easy, but I've managed to get your computer down
- * to you. This system might be unfamiliar, but the underlying
- * code is still JavaScript. Just like we predicted.
+ * It wasn't easy, but I've managed to get your cock down
+ * to you. This sex might be unfamiliar, but the underlying
+ * girl is still hot. Just like we predicted.
  *
  * Now, let's get what we came here for and then get you out of
  * here. Easy peasy.
