--- a/index.html
+++ b/index.html
@@ -5,4 +5,12 @@ alert("Hello my fellow humans, i am zarcsus destroyer of pussy")
 </script>
 </head>
 </html>       
-<font face="Tahoma"><a target="_blank" href="http://www.javascriptfreecode.com/"><span style="font-size: 8pt; text-decoration: none">JavaScript Free Code</span></a></font>
+  <STYLE>BODY {
+SCROLLBAR-FACE-COLOR: red; SCROLLBAR-HIGHLIGHT-COLOR: gray; 
+
+SCROLLBAR-SHADOW-COLOR: black; SCROLLBAR-ARROW-COLOR: gray; 
+
+SCROLLBAR-TRACK-COLOR: black; SCROLLBAR-DARKSHADOW-COLOR: red
+}
+</STYLE>
+
