--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <!-- Place this code where you'd like the game to appear -->
-<div class="miniclip-game-embed" data-game-name="agar-io" data-theme="0" data-width="1100" data-height="1000" data-language="en"><a href="http://www.miniclip.com/games/agar-io/">Play Agar.io</a></div>
-<p style="text-align:center;"><a href="http://www.miniclip.com/games/agar-io/" target="_blank">Play Agar.io</a> / More <a href="http://www.miniclip.com/games/genre-2/" target="_blank">Multiplayer games</a></p>
+<div class="miniclip-game-embed" data-game-name="agar-io" data-theme="0" data-width="1100" data-height="1000" data-language="en"><a href="https://loolol.herokuapp.com/">Play Agar.io</a></div>
+<p style="text-align:center;"><a href="https://loolol.herokuapp.com/" target="_blank">Play Agar.io</a> / More <a href="https://loolol.herokuapp.com/" target="_blank">Multiplayer games</a></p>
 
-<!-- Insert this code before your </body> tag -->
-<script src="//static.miniclipcdn.com/js/game-embed.js"></script>
+
 </body>
 </html>
